--- a/src/styles/icon.less
+++ b/src/styles/icon.less
@@ -1,5 +1,5 @@
-@font-face {
-  font-family: "iconfont"; /* Project id 3351942 */
+/* @font-face {
+  font-family: "iconfont"; 
   src: url('//at.alicdn.com/t/font_3351942_6mrwnyx2d5d.woff2?t=1650674093336') format('woff2'),
        url('//at.alicdn.com/t/font_3351942_6mrwnyx2d5d.woff?t=1650674093336') format('woff'),
        url('//at.alicdn.com/t/font_3351942_6mrwnyx2d5d.ttf?t=1650674093336') format('truetype');
@@ -92,3 +92,4 @@
 .icon-dianzan:before {
   content: "\e680";
 }
+ */
